--- a/src/component/Modal/Modal.module.scss
+++ b/src/component/Modal/Modal.module.scss
@@ -1,29 +1,32 @@
 @import "../../scss/variables.scss";
 
 .container {
-  position: absolute;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
-  margin: 0rem;
-  padding: 0rem;
-  // overflow: auto;
+	position: absolute;
+	z-index: 3;
+	width: 100%;
+	height: 100%;
+	margin: 0rem;
+	padding: 0rem;
+	// overflow: auto;
 }
 
 .header {
-  display: flex;
-  background-color: map-get($grey, "light");
+	display: flex;
+	background-color: map-get($grey, "light");
 }
 
 .main {
-  position: relative;
-  overflow: auto;
-  // margin-top: 5rem;
-  left: 50%;
-  // top: 50%;
-  transform: translate(-50%);
-  background-color: aliceblue;
-  width: 40rem;
-  margin-bottom: 5rem;
-  margin-top: 2rem;
+	position: relative;
+	overflow: auto;
+	// margin-top: 5rem;
+	left: 50%;
+	// top: 50%;
+	transform: translate(-50%);
+	background-color: aliceblue;
+	width: 40rem;
+	margin-bottom: 5rem;
+	margin-top: 2rem;
+}
+li {
+	list-style: none;
 }
